# diffusion-studio

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
lib/: CMakeLists.txt
res/shaders/: compile.py  postprocess.comp
src/: global.cpp  global.hpp  main.cpp
src/app/: application.cpp  application.hpp
src/app/panels/: create_panel.cpp  create_panel.hpp  panel.hpp  preview_panel.cpp  preview_panel.hpp
src/dl/: diffusion_model.cpp  diffusion_model.hpp  diffusionmodel.cpp  diffusionmodel.hpp  sd_ggml.hpp  sd_instance.cpp  sd_instance.hpp  sdinstance.cpp  sdinstance.hpp
src/gfx/: image.cpp  image.hpp  imgui_layer.cpp  imgui_layer.hpp  imgui_stdlib.cpp  imgui_stdlib.hpp  renderer.cpp  renderer.hpp
src/platform/: window.cpp  window.h
src/util/: error.cpp  safe_queue.hpp  std.hpp  util.hpp
